# pyspark_get_pairs

./: README.md  main.py  pyproject.toml
config/: spark_config.py
data/: sample_data.py
logic/: joins.py
utils/: logger.py
